--- a/random-chat/ramdom-chat.csproj
+++ b/random-chat/ramdom-chat.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>ramdom_chat</RootNamespace>
+    <RootNamespace>random_chat</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
