--- a/test-random-chat/test-random-chat.csproj
+++ b/test-random-chat/test-random-chat.csproj
@@ -18,7 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ramdom-chat\ramdom-chat.csproj" />
+    <ProjectReference Include="..\random-chat\random-chat.csproj" />
+    <ProjectReference Include="..\random-chat\ramdom-chat.csproj" />
   </ItemGroup>
 
 </Project>
